--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
   <body>
     <header>
       <div class="container">
-        <img src="img/logo.png" alt="ロゴ" class="logo">
+        <h1 class="logo">
+          <a href="index.html">
+            <img src="img/logo.png" alt="ロゴ">
+          </a>
+        </h1>
 
         <div class="menu">
           <nav>
@@ -184,9 +188,12 @@
     </header>
 
     <main id="top" class="top">
+
       <div class="mainvisual">
         <div class="container">
-          <img src="img/fv-1.png" alt="ロゴ" />
+          <img src="img/fv-1.png" alt="ロゴ" class="fv-1"/>
+          <img src="img/fv-2.png" alt="ロゴ" class="fv-2"/>
+          <p class="fv-name-en">ANELA</p>
         </div>
       </div>
 
@@ -319,11 +326,11 @@
             <a href="tel:00000000000">000-00-0000</a><!-- TODO -->
           </div>
           <ul class="attention">
-            <li>※当店は 20歳未満の方のご入店・お酒の提供はお断りしております。</li>
+            <li>※当店は 未成年のご入店・お酒の提供はお断りしております。</li>
             <li>※営業中は接客のため、DM の返信やお電話の対応にお時間をいただく場合がございます。</li>
             <li>※営業・勧誘目的のご連絡は一切お断りしております。 何卒ご理解くださいませ。</li>
           </ul>
-          <p class="address">〒000-0000<br>愛媛県今治市<br>コアセカンドビル3F<!-- TODO --></p>
+          <p class="address">〒794-0041<br>愛媛県今治市松本町1丁目7-7<br>CORE 2nd 3F</p>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d732.6457296417109!2d133.00050468338898!3d34.06466674982578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35503a6798965aed%3A0x5548c1adb4c89588!2z44Ki44ON44Op!5e0!3m2!1sja!2sjp!4v1765263034137!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
@@ -340,7 +347,7 @@
             <li><a href="#contact">Access</a></li>
           </ul>
         </nav>
-        <p>&copy;︎ 2025 BOS Co., Ltd. All Rights Reserved.<br>Anela</p>
+        <p>&copy; 2025 BOS Co., Ltd. All Rights Reserved.<br>Anela</p>
       </div>
     </footer>
 
