--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="format-detection" content="telephone=no,email=no,address=no" />
 
-    <!-- ページタイトル（各ページで動的に差し替えてください） -->
-    <title>アネラ — 隠れ家スナック | Anela</title>
+    <title>メニュー・料金｜アネラ | Anela</title>
     <meta
       name="description"
       content="アネラ（Anela）は落ち着いた大人のためのスナックです。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）を取り揃えております。ご予約はSNS DMまたはお電話で承ります。" />
@@ -21,12 +20,12 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://example.com/" />
-    <!-- TODO: 実サイトのURLに差し替え -->
+    <link rel="canonical" href="https://oziaev.github.io/anela/menu.html" />
 
     <!-- Favicon / Manifest -->
     <link rel="icon" href="img/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- テーマカラー -->
@@ -40,23 +39,18 @@
     <meta
       property="og:description"
       content="落ち着いた大人のためのスナック。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）をご用意しています。" />
-    <meta property="og:url" content="https://example.com/" />
-    <!-- TODO -->
-    <meta property="og:image" content="https://example.com/og-image.jpg" />
-    <!-- TODO: 推奨 1200x630px -->
+    <meta property="og:url" content="https://oziaev.github.io/anela/" />
+    <meta property="og:image" content="https://oziaev.github.io/anela/img/og-image.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@your_twitter" />
-    <!-- TODO: あれば差し替え -->
     <meta name="twitter:title" content="アネラ — 大人の隠れ家スナック" />
     <meta
       name="twitter:description"
       content="焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）を取り揃えています。" />
     <meta
       name="twitter:image"
-      content="https://example.com/twitter-image.jpg" />
-    <!-- TODO -->
+      content="https://oziaev.github.io/anela/img/og-image.jpg" />
 
     <!-- Google / Search Console -->
     <!-- <meta name="google-site-verification" content="your_verification_token" /> -->
@@ -88,10 +82,10 @@
         "telephone": "+81-3-xxxx-xxxx" /* TODO: 実電話番号に差し替え */,
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "TODO: 住所",
-          "addressLocality": "TODO: 今治市松本町",
-          "addressRegion": "TODO: 愛媛県",
-          "postalCode": "TODO: 郵便番号",
+          "streetAddress": "松本町1丁目7-7",
+          "addressLocality": "今治市",
+          "addressRegion": "愛媛県",
+          "postalCode": "794-0041",
           "addressCountry": "JP"
         },
         "openingHoursSpecification": [
