画像アニメーション追加

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
       </div>
 
-      <section id="info" class="info">
+      <section id="info" class="info fadein">
         <div class="wrapper">
           <h2 class="info-title">~ ご案内 ~</h2>
 
@@ -229,7 +229,7 @@
       <section id="alcohol" class="alcohol">
         <div class="container">
           <ul class="alcohol-list">
-            <li class="shochu-whisky left">
+            <li class="shochu-whisky left fadein">
               <img class="alcohol-img" src="img/alcohol-1.png" alt="" />
               <div class="text">
                 <h3><span>Shochu & Whisky</span>焼酎・ウイスキー</h3>
@@ -249,7 +249,7 @@
               <img src="img/frame.png" alt="フレーム" class="frame" />
             </li>
 
-            <li class="wine-champagne right">
+            <li class="wine-champagne right fadein">
               <div class="text">
                 <h3><span>Wine & Champagne</span>ワイン・シャンパン</h3>
                 <p>
@@ -269,7 +269,7 @@
               <img src="img/frame.png" alt="フレーム" class="frame" />
             </li>
 
-            <li class="sake left">
+            <li class="sake left fadein">
               <img class="alcohol-img" src="img/alcohol-1.png" alt="" />
               <div class="text">
                 <h3><span>Sake</span>日本酒</h3>
@@ -301,7 +301,7 @@
       <section id="gallery" class="gallery">
         <div class="wrapper">
           <h2 class="gallery-title">Gallery</h2>
-          <ul class="gallery-lists">
+          <ul class="gallery-lists fadein">
             <li><img src="img/gallery-1.png" alt="店内写真" /></li>
             <li><img src="img/gallery-2.png" alt="店内写真" /></li>
             <li><img src="img/gallery-1.png" alt="店内写真" /></li>
