--- a/castwanted.html
+++ b/castwanted.html
@@ -10,7 +10,7 @@
     <title>メニュー・料金｜アネラ | Anela</title>
     <meta
       name="description"
-      content="アネラ（Anela）は落ち着いた大人のためのスナックです。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）を取り揃えております。ご予約はSNS DMまたはお電話で承ります。" />
+      content="アネラ（Anela）は愛媛県今治市のスナックです。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）を取り揃えております。ご予約はSNS DMまたはお電話で承ります。" />
 
     <!-- keywordsは必須ではないが簡易的に -->
     <meta
@@ -25,7 +25,6 @@
     <!-- Favicon / Manifest -->
     <link rel="icon" href="img/favicon.png" />
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- テーマカラー -->
@@ -35,16 +34,16 @@
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Anela (アネラ)" />
-    <meta property="og:title" content="アネラ — 大人の隠れ家スナック | Anela" />
+    <meta property="og:title" content="アネラ — 今治市のスナック | Anela" />
     <meta
       property="og:description"
-      content="落ち着いた大人のためのスナック。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）をご用意しています。" />
+      content="愛媛県今治市のスナック。焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）をご用意しています。" />
     <meta property="og:url" content="https://oziaev.github.io/anela/" />
     <meta property="og:image" content="https://oziaev.github.io/anela/img/og-image.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="アネラ — 大人の隠れ家スナック" />
+    <meta name="twitter:title" content="アネラ — 今治市のスナック" />
     <meta
       name="twitter:description"
       content="焼酎・ウイスキー・ワイン・シャンパン・日本酒（山丹政宗 ほか）を取り揃えています。" />
@@ -79,7 +78,7 @@
           "name": "BOS Co., Ltd."
         },
         "url": "https://example.com/",
-        "telephone": "+81-3-xxxx-xxxx" /* TODO: 実電話番号に差し替え */,
+        "telephone": "+81-90-5148-5498",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "松本町1丁目7-7",
