--- a/castwanted.html
+++ b/castwanted.html
@@ -135,7 +135,7 @@
         <div class="menu">
           <nav>
             <ul>
-              <li><a href="#">Top</a></li>
+              <li><a href="index.html">Top</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="castwanted.html">Cast Wanted</a></li>
               <li><a href="index.html#access">Access</a></li>
@@ -143,31 +143,27 @@
           </nav>
           <ul class="header-sns">
             <li class="instagram">
-              <!-- TODO -->
-              <a href="#">
+              <a href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
                 <img src="img/instagram.png" alt="インスタグラム">
               </a>
             </li>
             <li class="tel">
-              <!-- TODO -->
-              <a href="#">
+              <a href="tel:08051485498">
                 <img src="img/tel.png" alt="電話">
               </a>
             </li>
             <li class="tb-instagram">
-              <!-- TODO -->
-              <a href="#">
+              <a href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
                 <img src="img/instagram-tb.png" alt="インスタグラム">
               </a>
             </li>
             <li class="tb-tel">
-              <!-- TODO -->
-              <a href="#">
+              <a href="tel:08051485498">
                 <img src="img/tel-tb.png" alt="電話">
               </a>
             </li>
           </ul>
-          <a class="nav-logo" href="#"><img class="img" src="img/nav-logo.png" alt="ロゴ"></a>
+          <a class="nav-logo" href="index.html"><img class="img" src="img/nav-logo.png" alt="ロゴ"></a>
         </div>
 
         <div class="toggle">
@@ -233,11 +229,9 @@
           <h2 class="section-title">Contact</h2>
           <p>質問や見学のご相談も、受け付けております。<br>まずは一度、お店の雰囲気を覗きに来てみませんか？</p>
           <div class="sns">
-            <a class="instagram" href="#"><img src="img/instagram.png" alt="インスタグラム"></a>
-            <!-- TODO -->
+            <a class="instagram" href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instagram.png" alt="インスタグラム"></a>
             ・
-            <a class="tel" href="tel:00000000000">TEL</a>
-            <!-- TODO -->
+            <a class="tel" href="tel:08051485498">TEL</a>
           </div>
         </div>
       </section>
@@ -258,17 +252,15 @@
           <img class="logo" src="img/footer-logo.png" alt="ロゴ">
           <nav>
             <ul>
-              <li><a href="#">TOP</a></li>
+              <li><a href="index.html">TOP</a></li>
               <li><a href="menu.html">CHARGE</a></li>
               <li><a href="castwanted.html">CAST WANTED</a></li>
             </ul>
           </nav>
           <div class="sns">
-            <a class="instagram" href="#"><img src="img/instagram.png" alt="インスタグラム"></a>
-            <!-- TODO -->
+            <a class="instagram" href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instagram.png" alt="インスタグラム"></a>
             ・
-            <a class="tel" href="tel:00000000000">TEL</a>
-            <!-- TODO -->
+            <a class="tel" href="tel:08051485498">TEL</a>
           </div>
           <ul class="attention">
             <li class="small">※当店は 未成年のご入店・お酒の提供はお断りしております。</li>
