--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="menu">
           <nav>
             <ul>
-              <li><a href="#">Top</a></li>
+              <li><a href="index.html">Top</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="castwanted.html">Cast Wanted</a></li>
               <li><a href="#access">Access</a></li>
@@ -143,31 +143,27 @@
           </nav>
           <ul class="header-sns">
             <li class="instagram">
-              <!-- TODO -->
-              <a href="#">
+              <a href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
                 <img src="img/instagram.png" alt="インスタグラム">
               </a>
             </li>
             <li class="tel">
-              <!-- TODO -->
-              <a href="#">
+              <a href="tel:08051485498">
                 <img src="img/tel.png" alt="電話">
               </a>
             </li>
             <li class="tb-instagram">
-              <!-- TODO -->
-              <a href="#">
+              <a href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
                 <img src="img/instagram-tb.png" alt="インスタグラム">
               </a>
             </li>
             <li class="tb-tel">
-              <!-- TODO -->
-              <a href="#">
+              <a href="tel:08051485498">
                 <img src="img/tel-tb.png" alt="電話">
               </a>
             </li>
           </ul>
-          <a class="nav-logo" href="#"><img class="img" src="img/nav-logo.png" alt="ロゴ"></a>
+          <a class="nav-logo" href="index.html"><img class="img" src="img/nav-logo.png" alt="ロゴ"></a>
         </div>
 
         <div class="toggle">
@@ -216,11 +212,9 @@
               <span class="small">※営業・勧誘目的のご連絡は一切お断りしております。</span>
             </p>
             <div class="sns">
-              <a class="instagram" href="#"><img src="img/instagram.png" alt="インスタグラム"></a>
-              <!-- TODO -->
+              <a class="instagram" href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instagram.png" alt="インスタグラム"></a>
               ・
-              <a class="tel" href="tel:00000000000">TEL</a>
-              <!-- TODO -->
+              <a class="tel" href="tel:08051485498">TEL</a>
             </div>
           </div>
         </div>
@@ -250,11 +244,9 @@
           <h2 class="section-title">ACCESS</h2>
           <p class="address">〒794-0041<br>愛媛県今治市松本町1丁目7-7<br>CORE 2nd 3F</p>
             <div class="sns">
-              <a class="instagram" href="#"><img src="img/instagram.png" alt="インスタグラム"></a>
-              <!-- TODO -->
+              <a class="instagram" href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instagram.png" alt="インスタグラム"></a>
               ・
-              <a class="tel" href="tel:00000000000">TEL</a>
-              <!-- TODO -->
+              <a class="tel" href="tel:08051485498">TEL</a>
             </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d732.6457296417109!2d133.00050468338898!3d34.06466674982578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35503a6798965aed%3A0x5548c1adb4c89588!2z44Ki44ON44Op!5e0!3m2!1sja!2sjp!4v1765263034137!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -268,17 +260,15 @@
           <img class="logo" src="img/footer-logo.png" alt="ロゴ">
           <nav>
             <ul>
-              <li><a href="#">TOP</a></li>
+              <li><a href="index.html">TOP</a></li>
               <li><a href="menu.html">CHARGE</a></li>
               <li><a href="castwanted.html">CAST WANTED</a></li>
             </ul>
           </nav>
           <div class="sns">
-            <a class="instagram" href="#"><img src="img/instagram.png" alt="インスタグラム"></a>
-            <!-- TODO -->
+            <a class="instagram" href="https://www.instagram.com/anela_0304?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instagram.png" alt="インスタグラム"></a>
             ・
-            <a class="tel" href="tel:00000000000">TEL</a>
-            <!-- TODO -->
+            <a class="tel" href="tel:08051485498">TEL</a>
           </div>
           <ul class="attention">
             <li class="small">※当店は 未成年のご入店・お酒の提供はお断りしております。</li>
